# discord-music-bot

./: .env.sample  .gitignore  1_docker_up.sh  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml
requirements/: dev.txt  prod.txt
src/: bot.py  config.py  lint.py
src/commands/: playback_commands.py  queue_commands.py  voice_commands.py  youtube_commands.py
src/player/: queue_manager.py  ytdl_source.py
src/utils/: __init__.py  logger.py  youtube_api.py
